--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <span>Revista</span>
     </header>
     <main>
-        <h1>Cadastro</h1>
+        <h1>Cadastro</h1
         
         <p>Estamos lançando uma nova revista e enviaremos o primeiro exemplar grátis para todos que se cadastrarem hoje no site.</p>
 
